# polarspark

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: python-app.yml  release.yml
plspark/: __init__.py  accumulators.py  conf.py  context.py  files.py  join.py  rdd.py  serializers.py  util.py
plspark/cloudpickle/: __init__.py
plspark/errors/: __init__.py  utils.py
plspark/errors/exceptions/: base.py  captured.py
plspark/sql/: __init__.py  column.py  conf.py  context.py  dataframe.py  functions.py  readwriter.py  session.py  types.py  utils.py
plspark/sql/pandas/: conversion.py  map_ops.py  serializers.py  types.py  utils.py
polarspark/: __init__.py  conf.py  context.py  rdd.py  util.py
polarspark/errors/: error_classes.py
polarspark/sql/: __init__.py  catalog.py  column.py  conf.py  context.py  dataframe.py  functions.py  group.py  readwriter.py  session.py  types.py  utils.py
polarspark/sql/_internal/catalog/: in_memory_catalog.py
polarspark/sql/_internal/parser/: ast.py  ddl.py  models.py  parser.py
polarspark/sql/pandas/: conversion.py  types.py
polarspark/sql/streaming/: __init__.py  file_watcher.py  query.py  readwriter.py
polarspark/sql/tests/: test_column.py  test_dataframe.py  test_dataframe_join_ported.py  test_datafrma_join_ported.py  test_functions.py  test_types.py
polarspark/testing/: sqlutils.py  utils.py
polarspark/utils/: import_redirector.py
test_table1/: part-00000-a76f6d8f-8189-4542-af51-8498229cfa48-c000
(+2 files in other folders)
