[project]
name = "polarspark"
version = "0.1.8"
authors = [
  { name="Khalid Mammadov", email="xmamedov@gmail.com" },
]
description = "Apache Spark on Polars"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pandas>=2.2.3',
    'numpy>=1.21',
    'polars==1.33.1',
    'pyarrow>=4.0.0',
    'tzlocal==5.2',
    'deltalake==0.22.3'
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/khalidmammadov/polarspark"
Issues = "https://github.com/khalidmammadov/polarspark/issues"
